<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Gerenciador Financeiro</string>
    <string name="exit">Sair</string>
    <string name="sobre">Sobre</string>
    <string name="about_txt">Inatel - TCC \nTema: S.O. Android \nVersão: 2.0.3 \nData: 16/11/2011</string>
    <string name="register_bill_txt">Cadastrar Conta</string>
    <string name="location_gps">Localizar Bancos</string>
    <string name="name_txt">Conta*:</string>
    <string name="vencimento_txt">Vencimento*:</string>
    <string name="valor_txt">Valor*:</string>
    <string name="cancelar">Cancelar</string>
    <string name="gravar">Gravar</string>
    <string name="alterar">Alterar</string>
    <string name="codigo_barra">Código de Barra:</string>
    <string name="inserir">Inserir</string>
    <string name="pagamento_realizado">Pagamento Realizado</string>
    <string name="preencha_campos">Preencha correatamente os campos marcados.</string>
    <string name="ok_txt">Ok</string>
    <string name="notificar_txt">Notificar às*:</string>
    <string name="procurar_banco">Procurar Banco</string>
    <string name="marcar_como_pago">Marcar Como Pago</string>
    <string name="lembrar_mais_tarde">Lembrar Mais Tarde</string>
    <string name="remarcar_data">Remarcar Data</string>
    <string name="barcode_scanner_unavailable">
    Para utilizar esse recurso é necessário possuir o "Barcode Scanner"
    instalado, Deseja instala-lo agora?</string>
    <string name="instalar">Instalar</string>
    <string name="visualisar_contas">Visualisar Contas</string>
    <string name="name">Conta: </string>
    <string name="vencimento">Vencimento: </string>
    <string name="codigo">Código: </string>
    <string name="valor">Valor: </string>
    <string name="share">Compartilhar Código de Barra</string>
    <string name="remove_bill_alert">Você realmente deseja apagar esta conta?</string>
    <string name="option_alert">O que você gostaria de fazer com esta conta?</string>
    <string name="remove_txt">Remover</string>
    <string name="today_bills">Contas de Hoje:</string>
    <string name="empty_list">Nenhuma Conta foi \nCadastrada.</string>
    <string name="empty_list_contact">Nenhum Contato foi \nCadastrada.</string>
    <string name="spinner_prompt">Listar:</string>
    <string name="sms">Enviar por SMS</string>
    <string name="email">Enviar por E-mail</string>
    <string name="total_txt">Total: </string>
    <string name="select_bill">Selecionar Contas</string>
    <string name="select_contacts">Selecionar Contatos</string>
    <string name="enviar_sms">Enviar por SMS</string>
    <string name="enviar_email">Enviar por E-mail</string>
    <string name="enviar_por">Enviar por:</string>
    

	
</resources>

