<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="10dip"
    android:paddingTop="7dip"
    android:paddingBottom="7dip">

    <ImageView
        android_id="@+id/thumb_image_paid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:src="@drawable/thumb_image" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="70dip"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/bill_name_label_paid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/ListSubTitleFont"
                android:text="@string/name" />

            <TextView
                android:id="@+id/bill_name_paid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/ListTextFont"
                android:layout_marginLeft="3dip"
                android:layout_toRightOf="@id/bill_name_label_paid" />


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/bill_value_label_paid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/ListSubTitleFont"
                android:text="@string/valor" />

            <TextView
                android:id="@+id/bill_value_paid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/ListTextFont"
                android:layout_marginLeft="3dip"
                android:layout_toRightOf="@id/bill_value_label_paid" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/bill_deadline_label_paid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/ListSubTitleFont"
                android:text="@string/vencimento" />

            <TextView
                android:id="@+id/bill_deadline_paid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/ListTextFont"
                android:layout_marginLeft="3dip"
                android:layout_toRightOf="@id/bill_deadline_label_paid" />

        </RelativeLayout>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/check_image_layout_paid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="10dip"
        android:layout_centerInParent="true">

        <CheckBox
            android:id="@+id/checkbox_paid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:focusableInTouchMode="false" />

    </RelativeLayout>


</RelativeLayout>
